--- a/adverts/templates/adverts/details-advert.html
+++ b/adverts/templates/adverts/details-advert.html
@@ -29,7 +29,9 @@
         background-color: #D5BDAD;
         color: white;
     }
-
+    #userAdvertCarousel{
+        height:360px;
+    }
     #userAdvertCarousel .carousel-control-next-icon, #userAdvertCarousel .carousel-control-prev-icon {
         background-color: rgba(0, 0, 0, 0.25);
         background-size: 60%;
@@ -38,7 +40,7 @@
     #userAdvertCarousel .carousel-item {
         background-position: center;
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        background-size: cover;
         background-color: white;
     }
 
@@ -50,13 +52,41 @@
     #userAdvertCarousel .carousel-indicators .active {
         background-color: #ffa970;
     }
+
+    /* RESPONSIVE */
+    @media screen and (max-width:1022px){
+        .conteneur-mobile{
+            flex-direction: column;
+        }
+        .col-left, .col-right{
+            width:100% !important;
+            margin-left: 0 !important;
+        }
+        .col-right{
+            margin-top:30px;
+        }
+    }
+    @media screen and (max-width:767px){
+        .advert-conso{
+            flex-direction: column;
+        }
+        .advert-conso > .avertInfoBlock{
+            width:100%;
+            margin-right: 0 !important;
+            margin-left: 0 !important;
+        }
+        .advert-conso > .avertInfoBlock:first-of-type{
+            margin-bottom: 30px !important;
+        }
+    }
+
 </style>
 
 <!--Advert details--> 
-<div class="container mt-3 py-5">
-    <div class="row">
-        <div class="col-7 px-0">
-            <div id="userAdvertCarousel" class="carousel carousel-fade slide w-100 h-100" data-bs-ride="carousel" data-bs-interval="false">
+<div class="container py-5">
+    <div class="d-flex conteneur-mobile">
+        <div class="col-7 px-0 col-left">
+            <div id="userAdvertCarousel" class="carousel carousel-fade slide w-100" data-bs-ride="carousel" data-bs-interval="false">
                 <div class="carousel-indicators mx-auto rounded">
                     {% for i in advert_infos.picture_count %}
                         <button type="button" data-bs-target="#userAdvertCarousel" data-bs-slide-to="{{ i }}" {% if forloop.first %}class="active" aria-current="true"{% endif %} aria-label="Slide {{ forloop.counter }}"></button>
@@ -76,67 +106,74 @@
                   <span class="visually-hidden">{% translate "Next" %}</span>
                 </button>
             </div>
-        </div>
-        <div class="col-5">
-            <div class="py-4 ps-5 ms-4 avertInfoBlock">
-                <div class="fw-bold">{% translate "Address" %}</div>
-                <div class="mt-2">{{ advert_infos.street_number }} {{ advert_infos.street_name }}, {{ advert_infos.city }} ({{ advert_infos.postal_code }})</div>
+            <div class="d-flex justify-content-between mt-3">
+                <div class="fw-bold h5">{{ advert_infos.service_type }} - {{ advert_infos.property_type }}</div>
+                <div class="fw-bold h3">{{ advert_infos.price }} €</div>
             </div>
-            <div class="py-4 ps-5 mt-4 ms-4 avertInfoBlock">
+            <div>{% blocktranslate with room_c=advert_infos.room_count bedroom_c=advert_infos.bedroom_count surface=advert_infos.surface %}{{ room_c }} room(s) - {{ bedroom_c }} bedroom(s) - {{ surface }}m²{% endblocktranslate %}</div>
+            <div> 
+                {% if advert_infos.is_furnished %}- {% translate "Furnished" %}{% endif %}
+                {% if advert_infos.has_balcony %}- {% translate "Balcony" %} {% endif %}
+                {% if advert_infos.has_terrace %}- {% translate "Terrace" %} {% endif %}
+                {% if advert_infos.has_elevator %}- {% translate "Elevator" %} {% endif %}
+                {% if advert_infos.has_parking %}- {% translate "Parking" %} -{% endif %}
+            </div>
+            <div class="mt-4">
+                <div class="fw-bold h5">{% translate "Address" %}</div>
+                <div class="mt-4">{{ advert_infos.street_number }} {{ advert_infos.street_name }}, {{ advert_infos.city }} ({{ advert_infos.postal_code }})</div>
+            </div>
+            <div class="mt-4">
+                <div class="fw-bold h5">{% translate "Description" %}</div>
+                <div class="mt-3">{{ advert_infos.description }}</div>
+            </div>
+            <div class="mt-4">
+                <div class="fw-bold h5">{% translate "Energy use" %}</div>
+                <div class="mt-4 d-flex advert-conso">
+                    <div class="w-lg-50 avertInfoBlock me-4 p-3 text-center small">
+                        <div>{% translate "Energy performance diagnosis (DPE)" %}</div>
+                        <div class="mt-3 d-flex justify-content-center align-items-center">
+                            {% for letter in "ABCDEFG" %}
+                                <div class="h4 fw-bold border border-dark p-2 {% if advert_infos.energy_use == letter %}active{% endif %}">{{ letter }}</div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="w-lg-50 avertInfoBlock ms-4 p-3 text-center small">
+                        <div>{% translate "Greenhouse gas emission index (GHG)" %}</div>
+                        <div class="mt-3 d-flex justify-content-center align-items-center">
+                            {% for letter in "ABCDEFG" %}
+                                <div class="h4 fw-bold border border-dark p-2 {% if advert_infos.greenhouse_gas == letter %}active{% endif %}">{{ letter }}</div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                {% if advert_infos.service_type == "Location" %}
+                <div class="w-50 mt-5">
+                    <div class="avertInfoBlock d-flex justify-content-around align-items-center me-5 p-3">
+                        <div>{% translate "Warranty" %}</div>
+                        <div class="h3 mb-0">{{ advert_infos.warranty_deposit }} €</div>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+        <div class="col-5 col-right ms-4">
+            <div class="py-4 ps-5 avertInfoBlock">
+                <div class="fw-bold h4">{% translate "Contact the owner" %}</div>
+                {% if request.user.is_authenticated %}
                 <div class="fw-bold">{% translate "Owner" %}</div>
                 <div class="mt-2">{{ advert_infos.creator }}</div>
                 <div class="fw-bold mt-3">{% translate "Mail" %}</div>
-                <div class="mt-2">{{ advert_infos.creator.user.email}}</div>
+                <div class="mt-2"><a href="mailto:{{ advert_infos.creator.user.email}}" class="text-decoration-none"><i class="bi bi-envelope-fill"></i> {{ advert_infos.creator.user.email}}</a></div>
                 <div class="fw-bold mt-3">{% translate "Phone number" %}</div>
-                <div class="mt-2">{{ advert_infos.creator.phone_number }}</div>
+                <div class="mt-2"><a href="tel:{{ advert_infos.creator.phone_number}}" class="text-decoration-none"><i class="bi bi-telephone-fill"></i> {{ advert_infos.creator.phone_number }}</a></div>
+                {% else %}
+                <div>{% translate "To see owner contact details you must be connected" %}</div>
+                <button class="buttonCustom mt-3"><a href="{% url 'adverts:login' %}" class="text-decoration-none text-light">{% translate "Log in" %}</a></button>
+                {% endif %}
             </div>
         </div>
     </div>
-    <div class="col-7">
-        <div class="d-flex justify-content-between mt-3">
-            <div class="fw-bold h5">{{ advert_infos.service_type }} - {{ advert_infos.property_type }}</div>
-            <div class="fw-bold h3">{{ advert_infos.price }} €</div>
-        </div>
-        <div>{% blocktranslate with room_c=advert_infos.room_count bedroom_c=advert_infos.bedroom_count surface=advert_infos.surface %}{{ room_c }} room(s) - {{ bedroom_c }} bedroom(s) - {{ surface }}m²{% endblocktranslate %}</div>
-        <div> 
-            {% if advert_infos.is_furnished %}- {% translate "Furnished" %}{% endif %}
-            {% if advert_infos.has_balcony %}- {% translate "Balcony" %} {% endif %}
-            {% if advert_infos.has_terrace %}- {% translate "Terrace" %} {% endif %}
-            {% if advert_infos.has_elevator %}- {% translate "Elevator" %} {% endif %}
-            {% if advert_infos.has_parking %}- {% translate "Parking" %} -{% endif %}
-        </div>
-        <div class="mt-4">
-            <div class="fw-bold h5">{% translate "Description" %}</div>
-            <div class="mt-3">{{ advert_infos.description }}</div>
-        </div>
-        <div class="mt-4">
-            <div class="fw-bold h5">{% translate "Energy use" %}</div>
-            <div class="mt-4 d-flex">
-                <div class="w-50 avertInfoBlock me-5 p-3 text-center small">
-                    <div>{% translate "Energy performance diagnosis (DPE)" %}</div>
-                    <div class="mt-3 d-flex justify-content-center align-items-center">
-                        {% for letter in "ABCDEFG" %}
-                            <div class="h4 fw-bold border border-dark p-2 {% if advert_infos.energy_use == letter %}active{% endif %}">{{ letter }}</div>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="w-50 avertInfoBlock ms-5 p-3 text-center small">
-                    <div>{% translate "Greenhouse gas emission index (GHG)" %}</div>
-                    <div class="mt-3 d-flex justify-content-center align-items-center">
-                        {% for letter in "ABCDEFG" %}
-                            <div class="h4 fw-bold border border-dark p-2 {% if advert_infos.greenhouse_gas == letter %}active{% endif %}">{{ letter }}</div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-            <div class="w-50 mt-5">
-                <div class="avertInfoBlock d-flex justify-content-around align-items-center me-5 p-3">
-                    <div>{% translate "Warranty" %}</div>
-                    <div class="h3 mb-0">{{ advert_infos.warranty_deposit }} €</div>
-                </div>
-            </div>
-        </div>
-    </div>
+
 </div>
 
 {% endblock %}
